# rcloud

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  conanfile.py  conanfile.py.in
.github/cmake/: cmake_project.cmake  executable_definition.cmake  functions.cmake  interface_library_definition.cmake  shared_library_definition.cmake  static_library_definition.cmake
.github/workflows/: create_project.yml
cmake/: RcloudConfig.cmake.in  cmake_uninstall.cmake
include/rcloud/: backing_file.h  drive.h  export.h  filesystem.h  fs.h  loop.h  rcloud.h  util.h
include/template/: export.h.in  template.h.in
src/: CMakeLists.txt  CMakeLists.txt.in
src/rcloud/: CMakeLists.txt  backing_file.c  drive.c  filesystem.c  fs.c  loop.c  main.c  rcloud.c  util.c
src/template/: CMakeLists.txt.in  main.c.in  template.c.in
test/: CMakeLists.txt  CMakeLists.txt.in  backing_file_test.cpp  drive_test.cpp  fs_test.cpp  loop_test.cpp
test/include/: dir_handle.hpp  fd_handle.hpp  file_handle.hpp
test/rcloud/: CMakeLists.txt  backing_file_test.cpp  drive_test.cpp  loop_test.cpp  rcloud_test.cpp  util_test.cpp
test/src/: CMakeLists.txt
test/template/: CMakeLists.txt.in  template_test.cpp.in
